申请appid之后才能正常运行demo

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,8 +43,8 @@
           <activity android:name=".YKWifiConfigActivity" />
           <activity android:name=".YKWifiDeviceControlActivity" />
             <activity android:name=".DeviceListActivity" />
-          <meta-data android:name="yk_key" android:value="yk14876611858976"/>
-          <!-- 武汉简联 APPID: 14878414137274 -->
+          <meta-data android:name="yk_key" android:value="yk"/>
+          <!--yk_key需要向我公司申请 格式为：ykxxxxxx  -->
      </application>
 
 </manifest>
