--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="22" />
 
-   <!-- Required  一些系统要求的权限，如访问网络等 -->
+    <!-- Required  一些系统要求的权限，如访问网络等 -->
     <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -18,7 +18,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_LOGS" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-     <!-- SDK 使用权限 -->
+    <!-- SDK 使用权限 -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
@@ -29,22 +29,26 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-         >
+        android:label="@string/app_name" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-          <activity android:name=".YKCodeAPIActivity"  />
-          <activity android:name=".YKWifiConfigActivity" />
-          <activity android:name=".YKWifiDeviceControlActivity" />
-            <activity android:name=".DeviceListActivity" />
-          <meta-data android:name="yk_key" android:value="yk14876611858976"/>
-          <!--yk_key需要向我公司申请 格式为：ykxxxxxx  -->
-     </application>
+        <activity android:name=".YKCodeAPIActivity" />
+        <activity android:name=".YKWifiConfigActivity" />
+        <activity android:name=".YKWifiDeviceControlActivity" />
+        <activity android:name=".AirControlActivity" />
+        <activity android:name=".DeviceListActivity" />
+
+        <meta-data
+            android:name="yk_key"
+            android:value="" />
+        <!-- yk_key需要向我公司申请 格式为：ykxxxxxx -->
+    </application>
 
 </manifest>
