--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -49,7 +49,7 @@
 
         <meta-data
             android:name="yk_key"
-            android:value="yk14649204849260" />
+            android:value="" />
         <!-- yk_key需要向我公司申请 格式为：ykxxxxxx -->
     </application>
 
